@@ -481,6 +481,21 @@ __PACKAGE__->has_many(
   { cascade_copy => 0, cascade_delete => 0 },
 );
 
+=head2 gsu_sample_uploads
+
+Type: has_many
+
+Related object: L<WTSI::DNAP::Warehouse::Schema::Result::GsuSampleUpload>
+
+=cut
+
+__PACKAGE__->has_many(
+  'gsu_sample_uploads',
+  'WTSI::DNAP::Warehouse::Schema::Result::GsuSampleUpload',
+  { 'foreign.id_study_tmp' => 'self.id_study_tmp' },
+  { cascade_copy => 0, cascade_delete => 0 },
+);
+
 =head2 iseq_flowcells
 
 Type: has_many
@@ -557,8 +572,8 @@ __PACKAGE__->has_many(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07049 @ 2019-06-03 13:17:44
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:ZUb0NzmfNR9Gxza74GVPFw
+# Created by DBIx::Class::Schema::Loader v0.07051 @ 2023-02-23 11:12:46
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:NrXlvzwGR2uLtnN+fJVHvw
 
 with 'WTSI::DNAP::Warehouse::Schema::Query::LimsFlags';
 
